@@ -76,13 +76,13 @@ menuentry "${OS}" ${CLASS} {
 EOF
 prepare_grub_to_access_device ${GRUB_DEVICE_BOOT} | sed -e "s/^/\t/"
 cat << EOF
-	echo		$(gettext "Loading GNU Mach ...")
+	echo		'$(gettext_quoted "Loading GNU Mach ...")'
 	multiboot	${kernel} root=device:${GRUB_DEVICE#/dev/}
 EOF
 save_default_entry | sed -e "s/^/\t/"
 prepare_grub_to_access_device ${GRUB_DEVICE} | sed -e "s/^/\t/"
 cat << EOF
-	echo		$(gettext "Loading the Hurd ...")
+	echo		'$(gettext_quoted "Loading the Hurd ...")'
 	module		/hurd/${hurd_fs}.static ${hurd_fs} --readonly \\
 			--multiboot-command-line='\${kernel-command-line}' \\
 			--host-priv-port='\${host-port}' \\
@@ -98,13 +98,13 @@ menuentry "${OS} (recovery mode)" {
 EOF
 prepare_grub_to_access_device ${GRUB_DEVICE_BOOT} | sed -e "s/^/\t/"
 cat << EOF
-	echo		$(gettext "Loading GNU Mach ...")
+	echo		'$(gettext_quoted "Loading GNU Mach ...")'
 	multiboot	${kernel} root=device:${GRUB_DEVICE#/dev/} -s
 EOF
 save_default_entry | sed -e "s/^/\t/"
 prepare_grub_to_access_device ${GRUB_DEVICE} | sed -e "s/^/\t/"
 cat << EOF
-	echo		$(gettext "Loading the Hurd ...")
+	echo		'$(gettext_quoted "Loading the Hurd ...")'
 	module		/hurd/${hurd_fs}.static ${hurd_fs} \\
 			--multiboot-command-line='\${kernel-command-line}' \\
 			--host-priv-port='\${host-port}' \\
