@@ -1,3 +1,14 @@
+2010-04-13  Carles Pina i Estany  <carles@pina.cat>
+2010-04-13  Colin Watson  <cjwatson@ubuntu.com>
+
+	Enclose all translated strings in grub.cfg in single quotes, and
+	escape them appropriately (Ubuntu bug #552921).
+
+	* util/grub-mkconfig_lib.in (gettext_quoted): New function.
+	* util/grub.d/10_hurd.in: Use it.
+	* util/grub.d/10_kfreebsd.in (kfreebsd_entry): Likewise.
+	* util/grub.d/10_linux.in (linux_entry): Likewise.
+
 2010-04-11  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Fix cygwin compilation.
